--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -1,22 +1,38 @@
-<!doctype html>
-<html lang="en">
-	<head>
-		<meta charset="UTF-8" />
-		<meta name="viewport" content="width=device-width" />
-		<link rel="icon" type="image/svg+xml" href="/favicon.svg" />
-		<meta name="generator" content={Astro.generator} />
-		<title>Astro Basics</title>
-	</head>
-	<body>
-		<slot />
-	</body>
-</html>
+---
+import Header from './Header.astro';
 
-<style>
-	html,
-	body {
-		margin: 0;
-		width: 100%;
-		height: 100%;
-	}
-</style>
+import '../assets/styles/style.css';
+---
+<!doctype html>
+<html>
+<head>
+	<meta http-equiv="Content-Type" content="text/html; charset=UTF-8" />
+	<title>Gajówka Pasieki</title>
+	<meta name="generator" content="Astro" />
+</head>
+<body>
+	<div id="container">
+		<Header />
+		<div id="content">
+			<slot />
+		</div>
+		<div id="rest">
+			<a href="http://gajowkapasieki.pl/">Gajówka Pasieki</a>  &bull; Copyright &copy; 2025 &bull; All Rights Reserved &bull;
+			Powered by <a href="https://astro.build" title="Astro" rel="nofollow">Astro</a> and
+			<a href="https://muzungu.pl" title="Konrad Karpieszuk - WordPress and Astro developer" rel="nofollow">Konrad Karpieszuk</a>
+		</div>
+	</div>
+	<script type="text/javascript">
+
+	var _gaq = _gaq || [];
+	_gaq.push(['_setAccount', 'UA-17346914-1']);
+	_gaq.push(['_trackPageview']);
+
+	(function() {
+		var ga = document.createElement('script'); ga.type = 'text/javascript'; ga.async = true;
+		ga.src = ('https:' == document.location.protocol ? 'https://ssl' : 'http://www') + '.google-analytics.com/ga.js';
+		var s = document.getElementsByTagName('script')[0]; s.parentNode.insertBefore(ga, s);
+	})();
+	</script>
+</body>
+</html>
