--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -1,11 +1,12 @@
 ---
-import Welcome from '../components/Welcome.astro';
 import Layout from '../layouts/Layout.astro';
 
-// Welcome to Astro! Wondering what to do next? Check out the Astro documentation at https://docs.astro.build
-// Don't want to use any of this? Delete everything in this file, the `assets`, `components`, and `layouts` directories, and start fresh.
 ---
 
 <Layout>
-	<Welcome />
+	<div class="small">
+	<a href="http://gajowkapasieki.pl/?p=11" rel="bookmark" title="Pierwsze zdjęcie z pasiek">
+	<img src="http://gajowkapasieki.pl/wp-content/uploads/DSC00083.jpg" alt="Pierwsze zdjęcie z pasiek " /></a>
+	</div>
 </Layout>
+
