--- a/src/assets/styles/style.css
+++ b/src/assets/styles/style.css
@@ -1,6 +1,6 @@
 body {
 	background: #000;
-	color: #666;
+	color: #e7e7e7;
 	font-size: 12px;
 	font-family: Arial, Verdana, Sans-Serif;
 	margin: 0px 0px 0px 0px;
@@ -27,110 +27,6 @@ a:hover {
 	overflow: hidden;
 	}
 
-
-/************************************************
-*	Header  									*
-************************************************/
-
-* html #header{ width: 860px; padding: 0px;}
-
-#header {
-	background: #000;
-	color: #333333;
-	font-size: 24px;
-	margin: 0px 0px 10px 0px;
-	padding: 4px 0px 20px 0px;
-	overflow: hidden;
-	border-bottom: 1px solid #333;
-	}
-
-#header a img {
-	border: none;
-	margin: 0px;
-	padding: 0px;
-	}
-
-#header h1 {
-	color: #99cc00;
-	font-size: 24px;
-	font-weight: normal;
-	margin: 0px;
-	padding: 10px 0px 10px 0px;
-	text-decoration: none;
-	background: #000;
-	}
-
-#header h1 a, #header h1 a:visited {
-	color: #fff;
-	font-weight: normal;
-	margin: 0px;
-	padding: 0px;
-	text-decoration: none;
-	}
-
-#header h1 a:hover {
-	color: #99cc00;
-	text-decoration: none;
-	}
-
-#headerleft {
-	width: 450px;
-	float: left;
-	font-size: 14px;
-	margin: 0px;
-	padding: 0px 0px 0px 20px;
-	overflow: hidden;
-	}
-
-#headerleft p {
-	color: #666666;
-	font-size: 15px;
-	font-weight: normal;
-	margin: 0px;
-	padding: 0px 0px 0px 25px;
-	text-decoration: none;
-	}
-
-#headerright {
-	width: 350px;
-	float: right;
-	font-size: 12px;
-	text-align: right;
-	margin: 0px;
-	padding: 10px 10px 10px 0px;
-	overflow: hidden;
-	}
-
-#headerright p {
-	color: #666666;
-	font-size: 18px;
-	font-weight: normal;
-	margin: 0px;
-	padding: 0px 0px 0px 20px;
-	text-decoration: none;
-	}
-#headerright li {
-	display: inline;
-	list-style-type: none;
-	margin: 0px;
-	padding: 0px;
-	}
-
-#headerright ul {
-	margin: 0px;
-	padding: 4px;
-	}
-
-#headerright ul li a {
-	font-size: 12px;
-	padding: 8px 20px 8px 20px;
-	margin: 0px 0px 0px 0px;
-	}
-
-#headerright ul li a:hover {
-	padding: 8px 20px 8px 20px;
-	}
-
 /************************************************
 *	HOME PAGE  									*
 ************************************************/
@@ -139,7 +35,7 @@ a:hover {
 .small{
 	float: left;
 	width: 830px;
-	height: 490px;
+	height: auto;
 	margin: 10px 5px 0px 5px;
 	background: #fff;
 	display: inline;
@@ -160,6 +56,16 @@ a:hover {
 .small img a:hover {
 	border: 1px solid #fff;
 	}
+
+.image-full {
+	float: left;
+	width: 830px;
+	height: auto;
+	margin: 10px 5px 0px 5px;
+	background: #fff;
+	display: inline;
+	border: 10px solid #666;
+}
 
 /************************************************
 *	PAGE TEMPLATE 									*
@@ -320,7 +226,7 @@ blockquote{
 	margin: 0px 0px 0px 25px;
 	padding: 0px 25px 0px 10px;
 	font-style: italic;
-	color: #666666;
+	color: #e7e7e7;
 	border-left: 1px solid #cccccc;
 	}
 
@@ -377,28 +283,6 @@ blockquote{
 	margin: 0px;
 	padding: 0px;
 	}
-
-/************************************************
-*	COMMENTS 									*
-************************************************/
-#comments {
-	width: 440px;
-	margin: 0px auto;
-	padding: 20px 0px 0px 0px;
-	border-top: 1px dotted #333;
-	}
-#comments h3 {
-	color: #99cc00;
-	font-size: 14px;
-	font-weight: bold;
-	margin-bottom: 0px;
-	line-height: 120%;
-	text-align: center;
-	padding: 0px 0px 10px 0px;
-	text-transform: uppercase;
-	border-top: 0px solid #666;
-	}
-
 
 /************************************************
 *	FOOTER 									*
