--- a/src/layouts/Header.astro
+++ b/src/layouts/Header.astro
@@ -1,13 +1,13 @@
 <div id="header">
 	<div id="headerleft">
-		<h1><a href="/">Gajówka Pasieki</a></h1>
+		<h1><a href={import.meta.env.BASE_URL + "/"}>Gajówka Pasieki</a></h1>
 		<h2>Urocze miejsce w Puszczy Białowieskiej cisza - natura - swoboda - <br />również wędkowanie (2km od zbiornika wodnego Siemianówka)</h2>
 	</div>
 	<div id="headerright">
 		<ul>
-			<li><a href="/galeria">Galeria zdjęć</a></li>
-			<li><a href="/informacje">Informacje</a></li>
-			<li><a href="/kontakt">Kontakt</a></li>
+			<li><a href={import.meta.env.BASE_URL + "/galeria"}>Galeria zdjęć</a></li>
+			<li><a href={import.meta.env.BASE_URL + "/informacje"}>Informacje</a></li>
+			<li><a href={import.meta.env.BASE_URL + "/kontakt"}>Kontakt</a></li>
 		</ul>
 	</div>
 </div>
