--- a/src/layouts/Header.astro
+++ b/src/layouts/Header.astro
@@ -5,9 +5,9 @@
 	</div>
 	<div id="headerright">
 		<ul>
-			<li><a href={import.meta.env.BASE_URL + "/galeria"}>Galeria zdjęć</a></li>
-			<li><a href={import.meta.env.BASE_URL + "/informacje"}>Informacje</a></li>
-			<li><a href={import.meta.env.BASE_URL + "/kontakt"}>Kontakt</a></li>
+			<li><a href="/galeria">Galeria zdjęć</a></li>
+			<li><a href="/informacje">Informacje</a></li>
+			<li><a href="/kontakt">Kontakt</a></li>
 		</ul>
 	</div>
 </div>
