--- a/src/pages/galeria.astro
+++ b/src/pages/galeria.astro
@@ -16,32 +16,32 @@ import DSC03692 from '../assets/images/DSC03692.jpg';
 		</div>
 
 		<p>
-			<a href={import.meta.env.BASE_URL + "/galeria/DSC00074.jpg"}>
+			<a href="/galeria/DSC00074.jpg">
 				<Image src={DSC00074} alt="DSC00074" width="500" />
 			</a>
 		</p>
 		<p>
-			<a href={import.meta.env.BASE_URL + "/galeria/DSC00079.jpg"}>
+			<a href="/galeria/DSC00079.jpg">
 				<Image src={DSC00079} alt="DSC00079" width="500" />
 			</a>
 		</p>
 		<p>
-			<a href={import.meta.env.BASE_URL + "/galeria/DSC00073.jpg"}>
+			<a href="/galeria/DSC00073.jpg">
 				<Image src={DSC00073} alt="DSC00073" width="500" />
 			</a>
 		</p>
 		<p>
-			<a href={import.meta.env.BASE_URL + "/galeria/DSC03690.jpg"}>
+			<a href="/galeria/DSC03690.jpg">
 				<Image src={DSC03690} alt="DSC03690" width="500" />
 			</a>
 		</p>
 		<p>
-			<a href={import.meta.env.BASE_URL + "/galeria/DSC03673.jpg"}>
+			<a href="/galeria/DSC03673.jpg">
 				<Image src={DSC03673} alt="DSC03673" width="500" />
 			</a>
 		</p>
 		<p>
-			<a href={import.meta.env.BASE_URL + "/galeria/DSC03692.jpg"}>
+			<a href="/galeria/DSC03692.jpg">
 				<Image src={DSC03692} alt="DSC03692" width="370" />
 			</a>
 		</p>
