--- a/src/layouts/Header.astro
+++ b/src/layouts/Header.astro
@@ -1,6 +1,6 @@
 <div id="header">
 	<div id="headerleft">
-		<h1><a href={import.meta.env.BASE_URL + "/"}>Gajówka Pasieki</a></h1>
+		<h1><a href="/">Gajówka Pasieki</a></h1>
 		<h2>Urocze miejsce w Puszczy Białowieskiej cisza - natura - swoboda - <br />również wędkowanie (2km od zbiornika wodnego Siemianówka)</h2>
 	</div>
 	<div id="headerright">
