--- a/src/pages/galeria/[slug].jpg.astro
+++ b/src/pages/galeria/[slug].jpg.astro
@@ -18,7 +18,7 @@ const { image } = Astro.props;
 <Layout>
 	<div id="content">
 		<div class="small">
-			<a href={import.meta.env.BASE_URL + "/galeria"} title="Wróć do galerii">
+			<a href="/galeria" title="Wróć do galerii">
 				<Image src={image} alt="" width="830" />
 			</a>
 		</div>
