konczenie poprawy urli

--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -8,7 +8,7 @@ import DSC00083 from '../assets/images/DSC00083.jpg';
 <Layout>
 	<div id="content">
 		<div class="small">
-			<a href={import.meta.env.BASE_URL + "/informacje"} title="Pierwsze zdjęcie z pasiek">
+			<a href="/informacje" title="Pierwsze zdjęcie z pasiek">
 			<Image src={DSC00083} alt="Pierwsze zdjęcie z pasiek " /></a>
 		</div>
 	</div>
