--- a/src/pages/informacje.astro
+++ b/src/pages/informacje.astro
@@ -16,7 +16,7 @@ import Layout from '../layouts/Layout.astro';
 		<p>&#8212;&#8212;&#8212;&#8212;&#8212;&#8212;&#8211;</p>
 		<p>współrzędne GPS:</p>
 		<p>52°53&#8217;67&#8243;N, 23°50&#8217;52&#8243;E</p>
-		<p><a href="/public/mapka-poprawiona.pdf">mapka</a></p>
+		<p><a href="/mapka-poprawiona.pdf">mapka</a></p>
 	</div>
 </Layout>
 
