--- a/src/pages/informacje.astro
+++ b/src/pages/informacje.astro
@@ -16,7 +16,31 @@ import Layout from '../layouts/Layout.astro';
 		<p>&#8212;&#8212;&#8212;&#8212;&#8212;&#8212;&#8211;</p>
 		<p>współrzędne GPS:</p>
 		<p>52°53&#8217;67&#8243;N, 23°50&#8217;52&#8243;E</p>
-		<p><a href="/mapka-poprawiona.pdf">mapka</a></p>
+		<p><a href="/mapka-poprawiona.pdf">Mapa PDF</a></p>
+		<p><a href="https://maps.app.goo.gl/mqgPaQdTCV3gv6Ur8" target="_blank">Zobacz w Google Maps</a></p>
+
+		<div id="map"></div>
 	</div>
+
+	<script>
+		import 'leaflet/dist/leaflet.css';
+		import L from 'leaflet';
+
+		document.addEventListener('DOMContentLoaded', () => {
+			const map = L.map('map').setView([52.88345454600178, 23.845425445567766], 15);
+			L.tileLayer('https://{s}.tile.openstreetmap.org/{z}/{x}/{y}.png', {
+			attribution: '&copy; <a href="https://www.openstreetmap.org/copyright">OpenStreetMap</a> contributors'
+			}).addTo(map);
+
+			L.marker([52.88345454600178, 23.845425445567766]).addTo(map);
+		});
+	</script>
 </Layout>
 
+<style>
+	#map {
+		height: 400px;
+		width: 100%;
+		margin: 20px 0;
+	}
+</style>
