--- a/src/pages/informacje.astro
+++ b/src/pages/informacje.astro
@@ -32,7 +32,14 @@ import Layout from '../layouts/Layout.astro';
 			attribution: '&copy; <a href="https://www.openstreetmap.org/copyright">OpenStreetMap</a> contributors'
 			}).addTo(map);
 
-			L.marker([52.88345454600178, 23.845425445567766]).addTo(map);
+			L.marker([52.88345454600178, 23.845425445567766], {
+				icon: L.icon({
+					iconUrl: 'marker.png',
+					iconSize: [48, 48],
+					iconAnchor: [24, 48],
+					popupAnchor: [1, -34]
+				})
+			}).addTo(map);
 		});
 	</script>
 </Layout>
