--- a/src/pages/informacje.astro
+++ b/src/pages/informacje.astro
@@ -34,7 +34,7 @@ import Layout from '../layouts/Layout.astro';
 
 			L.marker([52.88345454600178, 23.845425445567766], {
 				icon: L.icon({
-					iconUrl: 'marker.png',
+					iconUrl: 'https://gajowkapasieki.pl/marker.png',
 					iconSize: [48, 48],
 					iconAnchor: [24, 48],
 					popupAnchor: [1, -34]
